--- a/files/信息统计_1/styles.css
+++ b/files/信息统计_1/styles.css
@@ -742,6 +742,14 @@
   width:117px;
   word-wrap:break-word;
 }
+#u1904_ann {
+  border-width:0px;
+  position:absolute;
+  left:256px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
 #u1906_img {
   border-width:0px;
   position:absolute;
